--- a/ui/package.json
+++ b/ui/package.json
@@ -12,8 +12,10 @@
     "@types/react-dom": "^17.0.8",
     "@types/react-router-dom": "^5.1.7",
     "antd": "^4.16.5",
+    "ga-4-react": "^0.1.281",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-ga": "^3.3.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "typescript": "^4.3.4",
