--- a/ui/.vscode/launch.json
+++ b/ui/.vscode/launch.json
@@ -16,6 +16,19 @@
       "sourceMapPathOverrides": {
         "webpack://./src/*": "${webRoot}/*"
       }
+    },
+    {
+      "type": "chrome",
+      "request": "launch",
+      "name": "Launch Storybook",
+      "url": "http://localhost:8081",
+      "webRoot": "${workspaceFolder}/src",
+      "preLaunchTask": "storybook",
+      "postDebugTask": "kill-terminal",
+      "sourceMaps": true,
+      "sourceMapPathOverrides": {
+        "webpack://./src/*": "${webRoot}/*"
+      },
     }
   ]
 }
