--- a/ui/.vscode/tasks.json
+++ b/ui/.vscode/tasks.json
@@ -22,6 +22,27 @@
       }
     },
     {
+      "type": "shell",
+      "command": "npx start-storybook -p 8081",
+      "label": "storybook",
+      "group": {
+        "kind": "test",
+        "isDefault": true
+      },
+      "isBackground": true, // This prevents the launch.json to wait for the completion of the task
+      "problemMatcher": {
+        "owner": "custom", // This is not needed but, required by the problemMatcher Object
+        "pattern": {
+          "regexp": "^$" // This is not needed but, required by the problemMatcher Object
+        },
+        "background": {
+          "activeOnStart": true,
+          "beginsPattern": ".*storybook\/react*", // Signals the begin of the Task
+          "endsPattern": ".*Storybook.*started.*" // Signals that now the initialization of the task is complete
+        }
+      }
+    },
+    {
       "label": "kill-terminal",
       "type": "process",
       "command": "${command:workbench.action.terminal.kill}"
