--- a/data-access/package.json
+++ b/data-access/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "@types/node": "^15.12.5",
     "apollo-server-azure-functions": "^2.25.2",
-    "graphql": "^15.5.1"
+    "graphql": "^15.5.1",
+    "underscore": "^1.13.1"
   }
 }
