--- a/ui/package.json
+++ b/ui/package.json
@@ -4,6 +4,8 @@
   "private": true,
   "dependencies": {
     "@apollo/client": "^3.3.21",
+    "@storybook/addon-a11y": "^6.3.7",
+    "@storybook/addon-knobs": "^6.3.1",
     "@testing-library/jest-dom": "^5.14.1",
     "@types/jest": "^26.0.23",
     "@types/node": "^12.20.15",
@@ -12,14 +14,17 @@
     "@types/react-helmet": "^6.1.1",
     "@types/react-router-dom": "^5.1.7",
     "antd": "^4.16.5",
+    "creevey": "^0.7.38",
     "ga-4-react": "^0.1.281",
     "graphql": "^15.5.1",
+    "playwright": "^1.15.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-helmet": "^6.1.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "source-map-explorer": "^2.5.2",
+    "storybook-addon-playwright": "^4.7.1",
     "typescript": "^4.3.4",
     "web-vitals": "^1.1.2"
   },
@@ -62,9 +67,10 @@
     ]
   },
   "devDependencies": {
+    "@playwright/test": "^1.15.0",
     "@storybook/addon-actions": "^6.3.4",
     "@storybook/addon-essentials": "^6.3.4",
-    "@storybook/addon-links": "^6.3.4",
+    "@storybook/addon-links": "^6.3.7",
     "@storybook/node-logger": "^6.3.4",
     "@storybook/preset-create-react-app": "^3.2.0",
     "@storybook/react": "^6.3.4",
