--- a/ui/package.json
+++ b/ui/package.json
@@ -3,24 +3,30 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@apollo/client": "^3.3.21",
+    "@apollo/client": "^3.4.16",
+    "@storybook/addon-knobs": "^6.3.1",
+    "@storybook/addon-storyshots": "^6.3.12",
+    "@storybook/addon-storyshots-puppeteer": "^6.3.12",
     "@testing-library/jest-dom": "^5.14.1",
-    "@types/jest": "^26.0.23",
-    "@types/node": "^12.20.15",
-    "@types/react": "^17.0.11",
-    "@types/react-dom": "^17.0.8",
-    "@types/react-helmet": "^6.1.1",
-    "@types/react-router-dom": "^5.1.7",
-    "antd": "^4.16.5",
+    "@types/jest": "^26.0.24",
+    "@types/node": "^12.20.33",
+    "@types/react": "^17.0.31",
+    "@types/react-dom": "^17.0.10",
+    "@types/react-helmet": "^6.1.4",
+    "@types/react-router-dom": "^5.3.1",
+    "antd": "^4.16.13",
     "ga-4-react": "^0.1.281",
-    "graphql": "^15.5.1",
+    "graphql": "^15.6.1",
+    "playwright": "^1.16.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-helmet": "^6.1.0",
-    "react-router-dom": "^5.2.0",
+    "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
+    "react-test-renderer": "^17.0.2",
     "source-map-explorer": "^2.5.2",
-    "typescript": "^4.3.4",
+    "storybook-addon-playwright": "^4.7.2",
+    "typescript": "^4.4.4",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
@@ -62,16 +68,16 @@
     ]
   },
   "devDependencies": {
-    "@storybook/addon-actions": "^6.3.4",
-    "@storybook/addon-essentials": "^6.3.4",
-    "@storybook/addon-links": "^6.3.4",
-    "@storybook/node-logger": "^6.3.4",
+    "@storybook/addon-actions": "^6.3.12",
+    "@storybook/addon-essentials": "^6.3.12",
+    "@storybook/addon-links": "^6.3.12",
+    "@storybook/node-logger": "^6.3.12",
     "@storybook/preset-create-react-app": "^3.2.0",
-    "@storybook/react": "^6.3.4",
+    "@storybook/react": "^6.3.12",
     "@storybook/testing-react": "0.0.18",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
-    "chromatic": "^5.9.2",
-    "storybook-addon-apollo-client": "^4.0.8"
+    "chromatic": "^5.10.2",
+    "storybook-addon-apollo-client": "^4.0.9"
   }
 }
